Melhorando a lógica de centralizar a AppBar usando left e transform-translate, corrigindo bug onde a scrollbar(overflow-y) no root deslocava a AppBar, então ela (scrollbar) foi transferida para o filho direto de root.

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: #96caf0;
-  overflow-y: scroll;
+}
+
+#root:first-child {
+  overflow-y: "auto";
 }
